Image upload is done with a few other changes to the .env file

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGODB_ADMIN = hermestutor
-MONGODB_PASSWORD = Password1
-S3_BUCKET = tutor-app-image-upload-bucket 
-S3_REGION = us-east-1
-AWS_ACCESS_KEY_ID = AKIAIV7BXR3NAVYSOOWQ
-AWS_SECRET_ACCESS_KEY = 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
+MONGODB_ADMIN=hermestutor
+MONGODB_PASSWORD=Password1
+S3_BUCKET=tutor-app-image-upload-bucket 
+S3_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIAJYCHKJITJW6M54VQ
+AWS_SECRET_ACCESS_KEY=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
