--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.286.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
@@ -23,6 +24,7 @@
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
+    "multer-s3": "^2.7.0",
     "nodemon": "^1.18.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
