--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.18.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "s3-uploader": "^2.0.3"
+    "s3-uploader": "^2.0.3",
+    "typer-js": "^4.1.0"
   }
 }
