--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
-    "express-sessions": "^1.0.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "im-metadata": "^3.0.1",
     "im-resize": "^2.3.2",
     "imagemagick": "^0.1.3",
-    "jimp": "^0.3.2",
+    "moment": "^2.22.2",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "multer-s3": "^2.7.0",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.18.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
